minor: Gradle scripts.
Signed-off-by: Charlie Jiang <cqjjjzr@126.com>